docs/versions/0.12.1/website/src/content/docs/ja/workflows.mdx
---
title: ワークフロー
description: 複数エージェントの kvdag を定義し、各ノードを Karvex が管理するチームメイトとして実行し、DAG ビューで実行の様子をライブに確認します。
---

ワークフローは保存済みでバージョン管理された **kvdag** です。kvdag とは、ノード(タスク)を、結果を受け渡すエッジでつないだ有向非巡回グラフを指します。ワークフローを実行すると、各ノードは実際のターミナルペイン ── 通常は `claude` チームメイト ── として起動し、すべての分岐が解決するまで調整されます。

ワークフローは、計画 → 実装 → レビューのように、一度定義して繰り返し実行したい複数ステップ・複数エージェントの作業に向いています。すでに動いているエージェント同士を一度きりでスクリプト連携させたい場合は、代わりに [エージェント自動化](/ja/docs/agent-automation/) を参照してください。

## ワークフローとは

**ワークフロー** は、1つ以上の **kvdag バージョン** ── 不変のグラフ定義 ── をまとめる名前付きコンテナです。`kvx workflow create` が最初のバージョンを作り、`kvx workflow update` がその上に新しいバージョンを作成します。編集は既存のバージョンをその場で書き換えることはなく、常に新しいバージョンを生み出すので、過去の実行は実際に動いたバージョンに対して常に再現可能です。

**実行 (run)** は1つの kvdag バージョンを取り、宣言された実行引数を埋めてグラフを実行します。各ノードは **実行ノード (run node)** になります ── それぞれが独自のステータス、モデル/エフォートの割り当て、ペインへのバインディング、結果を持つインスタンスです。ノードはすべての入力エッジが解決した時点で開始し、互いに依存しないノードは設定された並行数の上限まで並列に実行されます。条件付きエッジの条件が false と評価されるとそのエッジは無効になり、すべての入力エッジが無効になったノードはグラフの残りをブロックすることなく `skipped` になります ── これがスクリプト言語なしで分岐を実現する仕組みです。

実行が完了するのは、スケジュールできるものが何もなくなった時点ではなく、すべてのノードが結果を確定し、その後に何が起きるかを記録した時点です。あるノードが後続エッジの解決、ブロッカーの記録、あるいは「後続がない」ことの明示的な証跡のいずれも残さずに終わった場合、実行は一時停止し、成功を黙って報告する代わりに責任のある正確なノードを名指しします。

## 定義フォーマット

`kvx workflow create` と `kvx workflow update` は、TOML または JSON の定義ドキュメントを読み込みます ── ファイル拡張子でフォーマットが決まります。手で編集しやすいのは TOML です:

```toml
name = "ship-feature"
description = "plan → implement → review"
contract = """
Reply only through result.json. Never edit files outside your node dir unless the task says so.
"""
max_depth = 3
max_nodes = 24

# Declared run-argument namespace. Without this, `{{goal}}` below has no inbound
# edge port to resolve against and workflow.create rejects the document.
[[arg]]
name = "goal"
required = true
description = "what to build"

[[node]]
key = "plan"
label = "Plan"
kind = "agent"
runner = "agent"          # `claude` teammate; "command" runs `command` as a plain process
demand = "critical"
prompt_template = "Produce an implementation plan for: {{goal}}"
output_schema = { type = "object", required = ["plan"], properties = { plan = { type = "string" } } }

[[node]]
key = "implement"
label = "Implement"
kind = "agent"
demand = "peak"
prompt_template = "Implement this plan:\n{{plan}}"
output_schema = { type = "object", required = ["changed_files","report"], properties = { changed_files = { type = "array" }, report = { type = "string" } } }

[[edge]]
from = "plan"
to = "implement"
kind = "data"
payload = "summary"
port = "plan"
```

`contract` はすべてのノードのシステムプロンプトの先頭に付加されます ── ノードごとに繰り返し書く代わりに、横断的なルールはここに書いてください。

`max_depth` と `max_nodes` は実行の成長上限であり、実際に効きます。ノードは実行中に新しいノードを提案できるからです ── 後述の「テンプレートと拡張」を参照してください。`max_nodes` (デフォルト `24`) は、実行がこれまでに具現化したノードを終了状態にかかわらずすべて数えます。失敗した子やスキップされた子が予算を返すことはないので、ノードが失敗を繰り返して無限に広がることはできません。`max_depth` (デフォルト `3`) は、グラフの層ではなく *拡張の世代* を数えます ── ドキュメントに書かれたノードはすべて深さ 0、そこから提案された子が深さ 1 なので、`max_depth = 3` は3世代までを許可します。実行のティアは、この両方をさらに狭めます。後述の「ティアと成長上限」を参照してください。

`default_tier` (`auto`、`max`、`high`、`medium`、`low`。デフォルトは `high`) は、`kvx workflow run start` に `--tier` が渡されなかったときにこのワークフローの実行が開始されるティアです。`name` や `contract` と同じドキュメントレベルのキーなので、変更するには新しいバージョンを作成することになります。

各 `[[arg]]` は実行引数の名前空間に1エントリを宣言し、実行時に `--arg name=value` で埋められます。`prompt_template` 内のすべての `{{name}}` プレースホルダーは、宣言済みの引数か入力エッジの `port` のいずれかに解決できなければなりません ── `workflow.create` は、実行される前に未解決のプレースホルダーを含むドキュメントを拒否し、実行の開始時には、デフォルト値のない必須引数が欠けている場合を別途拒否します。

各 `[[node]]` には一意な `key`、`label`、`prompt_template`、そして `output_schema` が必要です。`output_schema` は、ノードの結果が成功と見なされる前に検証対象となる JSON Schema です。`output_schema` を省略すると、ドキュメントが拒否されるのではなく、空のスキーマ `{}` (任意のオブジェクトを許可) が使われます。検証したい形が決まったら明示的に宣言してください。`kind` はデフォルトで `"agent"` です。他の種類 (`internal`、`gate`、`monitor`) は現在受け付けられていますが、そのスケジューリング動作は後のリリースで提供されます。`runner` はノードのプロセスがどう起動されるかを選びます ── 後述のノードランナーを参照してください。`demand` (`peak`、`critical`、`standard`、`light`。デフォルトは `standard`) は、実行のティアをノードごとのモデル/エフォート割り当てに反映します。

各 `[[edge]]` は `from` ノードと `to` ノードを接続し、`kind` が必要です: `sequence` (ソースが成功していること)、`data` (ソースが成功し、かつ結果が検証されていること)、`conditional` (ソースの結果に対して `condition` を評価し、false ならエッジが無効になる) のいずれかです。`kind` を省略すると `sequence` になります。`conditional` エッジは `condition` を宣言する必要があります ── `condition` のない `conditional` エッジは、後で解決されないまま黙って残るのではなく、作成時に拒否されます。`payload` は、ソースのチェックポイントのどれだけをターゲットへ渡すかを制御します: `none`、`summary` (デフォルト)、`full` のいずれかです。`port` は、エッジのペイロードが埋めるターゲットの `prompt_template` 内の `{{slot}}` の名前です。ターゲットの `prompt_template` に存在しない `{{slot}}` を指す `port` も、データが渡される先のないワークフローになってしまうため、作成時に拒否されます。

宣言済みの引数を指定して実行します:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode"
```

保存済みのワークフローを手で編集するには、新しい定義ファイルを指定して `kvx workflow update` を実行します。これは、元にしたバージョンをその場で書き換えるのではなく新しい kvdag バージョンを作成するので、過去のすべての実行は実際に動いたバージョンに対して再現可能なままです。

## ノードランナー

`runner` は、`kind` とは独立に、ノードのプロセスがどう起動されるかを選びます:

| `runner` | プロセス | 起動確認 | ステアリング | 完了 |
| --- | --- | --- | --- | --- |
| `agent` (デフォルト) | 実行が解決したモデルとエフォートで起動される、ペイン内の `claude` | 起動待機時間内に検出済みエージェントとして起動しなければならず、そうでなければ起動自体が失敗として扱われる | `agent.prompt` と同じ検証済み経路で配送される | 後述するノードの契約にある3つのシグナルのいずれか |
| `command` | ノード自身の `command` argv を、通常のプロセスとして実行 | なし ── ペインは単に起動したプロセスにすぎない | 生のペインテキストとして配送される | セルフレポートのみ |

`command` ノードには `command = ["...", ...]` ── シェル文字列ではなく argv のリスト ── が必要です。`agent` ノードと同じ `KARVEX_WORKFLOW_*` 環境変数を受け取るので、同じように `kvx workflow node complete` を呼び出せますが、ターンエンドフックも画面検出もありません。ノード自身がレポートすることだけが、そのノードを完了させます。

## テンプレートと拡張

仕事の形は、始めてみて初めて分かることがあります。シャードごとに1ノード置きたいことは分かっていても、何個のシャードになるかは誰かが見てみるまで分かりません。そこでノードは、実行中に新しいノードを要求できます。ただし作成はできません ── **ノードは提案し、決めるのは Karvex です**。これが、グラフの成長上限を「目安」ではなく本当の上限として保ちます。

拡張は定義の中で2つの半分に分かれます。**テンプレート** は `is_template = true` を付けたノードで、直接スケジュールされることはなく、何かが実体化するまで実行に現れません。テンプレートを実体化してよいノードは、どれを実体化できるか、そして合計で何個の子を作れるかを宣言します:

```toml
[[node]]
key = "fanout"
label = "Fan out"
prompt_template = "Split this into shards: {{goal}}"
output_schema = { type = "object", required = ["plan"], properties = { plan = { type = "string" } } }
expand_allow = ["worker"]   # このノードが実体化してよいテンプレート
expand_max = 8              # この実行で作成できる子の合計数

[[node]]
key = "worker"
label = "Worker"
is_template = true
prompt_template = "Work one shard of: {{goal}}"
output_schema = { type = "object", required = ["report"], properties = { report = { type = "string" } } }

[[node]]
key = "collect"
label = "Collect"
prompt_template = "Collect the shard reports:\n{{shard}}"
output_schema = { type = "object", required = ["report"], properties = { report = { type = "string" } } }

# ファンインのエッジは `worker` ではなく `fanout` から引きます。
[[edge]]
from = "fanout"
to = "collect"
kind = "data"
payload = "summary"
port = "shard"
```

`expand_max` のデフォルトは `0` なので、拡張はノードごとのオプトインです。またこの値は提案ごとではなく、そのノードが実行中に行ったすべての提案にわたって累積で数えられます。`expand_allow` は作成時に検証されます: 存在しないノードや、テンプレートではないノードを指すキーは `workflow.create` に拒否されます。

ファンインのエッジは、上のように **提案するノードから** 引いてください。テンプレート自身のエッジは実行グラフの構築時に落とされるため、テンプレート経由でしか到達できないノードは到達不能として作成時に拒否されます。子をつなぐのは代わりに継承です: 受理された子はすべて、親の出力エッジのコピーを受け取ります。だから各 `worker` にも `collect` へのエッジができ、`collect` は `fanout` だけでなく世代全体を待ちます。したがってテンプレートの `{{slot}}` は、自前の入力エッジポートを持たない以上、宣言済みの実行引数に解決できなければなりません。

継承の結果、複数の子のエッジが同じ下流ノードの同じポートに集まることがあります ── 上の例ではすべての `worker` が `collect` の `shard` ポートに着地します。したがってポートは1つのペイロードではなく、**寄与の並び** です。決着したエッジが1本だけのポートは変わりません: `inputs/<port>.json` はそのペイロードそのものであり、`{{slot}}` はこれまでどおりそれをそのままレンダリングします。1つのポートに複数のエッジが決着すると、各寄与者は `inputs/<port>/<source>.json` に自分専用のファイルを持ち、`inputs/<port>.json` は子の作成順に並んだそれらの索引 (`[{from, label, file, payload}, …]`) になり、`{{slot}}` は寄与ごとに1つの帰属ブロックとしてレンダリングされます:

```text
[from fanout/worker/1 · Shard 1]
auth shard reviewed, two findings

[from fanout/worker/2 · Shard 2]
ui shard reviewed, no findings
```

こうして `collect` の `{{shard}}` は、最後に終わった `worker` のレポートに黙って上書きされることなく、すべての `worker` のレポートをどれが誰のものか分かる形で見ることになります。

ノードは自分のペインの中から、完了する前に提案します:

```bash
kvx workflow node expand <run_id> <path> --template worker --label "Shard" --count 4
kvx workflow node expand <run_id> <path> --template worker --label "Shard" --input goal="just src/ui" --json
```

`node complete` と同じく、ノード自身の環境変数から `KARVEX_WORKFLOW_NODE_TOKEN` を読むため、ノードは自分自身の名義でしか提案できません。`--count` のデフォルトは 1 です。`--input KEY=VALUE` は、この提案が作成する子について、テンプレートの `prompt_template` 内の `{{slot}}` を1つ上書きします。宣言されていないスロットを指すキーは黙って無視されるのではなく拒否されるので、動的な経路は作成時の経路より厳密に狭いままです。このオーバーライドは同名の実行引数より優先され、子自身の `task.md` に反映されます ── これによって、1つの親が子ごとに異なる作業を与えられます。`--label` は、この提案が作成する子の名前を決めます: 子の `task.md` のタイトル、DAG ビュー上のボックス、ペインタイトル、`claude --name` のすべてに使われます。各子には `<parent>/<template>/<n>` というインスタンスパス ── `fanout/worker/1`、`fanout/worker/2` ── が親とテンプレートごとに1から採番されて与えられ、親が決着してから初めて開始されます。

提案は4つのガードレールに対して、この順で判定されます: 提案元ノードの `expand_allow`、その `expand_max`、実行の `max_depth`、実行の `max_nodes`。

:::note[拒否が黙って起きることはありません]
子を4つ求める提案に2つ分の余地しかない場合、**2つが作成され、不足分が報告されます**。4つすべてを受理すれば上限を破りますし、4つすべてを拒否すればそこにあった余地を無駄にします。部分的な受理が正当なのは切り捨てが報告されるからであり、だからこそ実行を説明するすべてのサーフェスに報告されます:

| サーフェス | 何を伝えるか |
| --- | --- |
| JSON API イベントストリームの `workflow.growth.limited` | 提案元ノード、テンプレート、どのガードレールか、その値、要求数と受理数 |
| `kvx workflow run show` | 実行の現在の成長状態と、直近にどのガードレールに達したか(要求数と受理数は含まない ── 後述の「コマンド」を参照) |
| `kvx workflow node show` | 提案元ノード自身の直近の拒否: ガードレール、その値、要求数と受理数 |
| DAG ビュー | 実行全体に渡るバナーと、提案したノードに付く注記。どちらも要求数と受理数を含む |
| 通知トースト | `config.toml` で通知が有効なら、同じメッセージ |
:::

`kvx workflow node expand` のレスポンスは、同じ判定を要求したノード自身に返すので、ノードは何を得られたかを正確に知ります。拒否された提案はエラーではなく **成功** したコマンドです: 終了コードが非ゼロになるのは、不正な実行 ID・パス・トークンの場合か、すでに閉じた実行の場合だけです。すでに終了したノードは提案できません。その子は、すでに決着したノードから伸びるエッジにぶら下がることになるからです。

## ティアと成長上限

実行の **ティア** は、その実行にどれだけコストをかけてよいかを決める唯一のダイヤルです。各ノードの `demand` と組み合わせてモデルと推論エフォートを選び、さらにグラフがどこまで成長してよいかを狭めます。設定できる場所は2つで、具体的な順に:

```bash
kvx workflow run start ship-feature --tier low   # この実行だけ
```

```toml
default_tier = "medium"                          # このワークフローのすべての実行
```

`auto`、`max`、`high` はドキュメントの上限をそのままにします。`medium` と `low` は狭めます:

| ティア | 実効 `max_nodes` | 実効 `max_depth` | モデル |
| --- | --- | --- | --- |
| `max` | 記述どおり | 記述どおり | `peak` demand では最強モデル、それ以外は opus。エフォートは全体で `max` |
| `high` (デフォルト) | 記述どおり | 記述どおり | opus。`light` demand では sonnet に下がる |
| `auto` | 記述どおり | 記述どおり | `high` の行を起点に、そのノード自身の履歴からノードごとに選択 |
| `medium` | 最大 24 | 記述どおり | `peak`/`critical` では opus、それ以外は sonnet |
| `low` | 最大 12 | 記述どおり | どの demand でも sonnet、エフォートは全体で `low` |

狭める方向にしか働きません: ティアがドキュメントの設定した上限を引き上げることはなく、同じワークフローを `low` で2回実行すれば、上限は2回とも同じです。実行が実際に適用した値がそのまま `kvx workflow run show` と JSON API の報告になるので、実行の成長上限がその実行自身の記録と食い違うことはありません。

## ノードの契約

すべてのノードは、専用のディレクトリ `<run dir>/<instance path>/` の中で実行されます:

| ファイル | 書き込む主体 | 内容 |
| --- | --- | --- |
| `task.md` | Karvex | レンダリング済みのプロンプト: ワークフローの契約、ノードの役割、タスク、`inputs/` 配下のファイルのパス |
| `inputs/<port>.json` | Karvex | 入力エッジのポートごとの、上流のチェックポイントのペイロード ── 決着したエッジが2本以上あるポート(拡張によるファンイン)では、その寄与を子の作成順に並べた索引が入る |
| `inputs/<port>/<source>.json` | Karvex | 寄与者ごとの専用ファイル。寄与したノードのインスタンスパスにちなんで命名される ── ファンインしたポートについてのみ書き込まれる |
| `output_schema.json` | Karvex | `result.json` が満たすべき JSON Schema |
| `result.json` | ノード自身 | 構造化された結果 |
| `artifacts/` | ノード自身 | `result.json` の `artifacts` 配列から参照されるファイル |

`result.json` を書き込み、次を実行してノードを完了させます:

```bash
kvx workflow node complete
kvx workflow node complete --result-file <path>   # defaults to ./result.json in the node directory
```

このコマンドは、ノードのペインにすでに設定されている環境変数 `KARVEX_WORKFLOW_RUN_ID`、`KARVEX_WORKFLOW_NODE_PATH`、`KARVEX_WORKFLOW_NODE_DIR`、`KARVEX_WORKFLOW_NODE_TOKEN` を読み取るため、位置引数を取りません。`result.json` には `summary` 文字列を含めてください ── 下流のノードや実行履歴が参照するのはこの文字列です ── また、インラインで収めるには大きすぎるものは `./artifacts/` 配下へのパスの配列 `artifacts` に入れてください。

このセルフレポートは、3つの完了シグナルのうち最も優先度の高いものです:

| 優先度 | シグナル | 対象 | 記録される値 |
| --- | --- | --- | --- |
| 1 | セルフレポート ── ノードが `kvx workflow node complete` を呼び出す | `agent` ノードと `command` ノード | `self_report` |
| 2 | ターンエンド ── 同梱の Claude フックがペインのターン終了を報告し、Karvex が `result.json` を読み取る | `agent` ノードのみ | `hook` |
| 3 | 検出 ── ペインが複数回連続で idle と判定され、かつ有効な `result.json` が存在する | `agent` ノードのみ | `detection` |

:::caution[idle だけでは完了しません]
`output_schema.json` に対して検証が通る `result.json` を一度も作らないままペインが idle になったノードは完了しません。代わりに `needs_attention` に移行し、その状態が続く間、実行は成功を報告しません。必ず `kvx workflow node complete` を通じて完了させるか、エージェントが最後に行うことが有効な結果の書き込みになるようにしてください。
:::

不正な結果には、スキーマエラーを引用した自動的な是正の再プロンプトが1回だけ送られます。それでも不正なままであれば、ノードは同じように `needs_attention` に移行します。

:::caution[0.12.0 から `maxLength` は強制されます]
Karvex が `result.json` を検証するスキーマのサブセット ── `type`、`required`、`properties`、`items` ── に、文字列の `maxLength` が加わりました。`output_schema` が宣言した `maxLength` を超える文字列を含む結果は、これまでの版では受理されていましたが、今後は検証に失敗し、是正の再プロンプトを1回受けたうえで `needs_attention` に移行します。ノードが本来意図していない `maxLength` を宣言している場合は、そこで失敗させるのではなく、スキーマから外してください。
:::

## 実行履歴と要約

完了したすべての実行は ── 成功でも失敗でも ── **要約 (summary)** を残します。要約は、実行が何をしたかを予算内の分量で記録したもので、実際に目で見られる要約ノードが書き、実行のペインが消えたあともずっと読めます。

要約ノードはグラフの一部ではなく **エピローグ** です。実行の終端ステータスが決まったあとにだけ開始するため、その結果を変えることは決してありません。`workflow.run.finished` はこれまでと同じタイミングで発火し、続いて要約ノードが予約済みインスタンスパス `.summary` の可視ペインとして実行され、要約が確定した時点で `workflow.run.summarized` が届きます。要約ノードが失敗しうるすべての経路 ── 出力が2回続けてスキーマに適合しない、起動に失敗する、ペインが死ぬ、実行がキャンセルされる、要約自体が無効化されている ── はすべて同じ結末に収束します: 失敗はジャーナルに記録され、通知は1回だけ出て、ペインは閉じられ、**実行自身のステータスには手が触れられません**。要約のない実行は正常な実行であり、`kvx workflow summary show` が「要約はありません」と答えるのも正常な応答であって、エラーではありません。

`.summary` ノードは `nodes_total` と `nodes_done` から除外されます。この2つは実行が宣言した作業を数えるものなので、実行が finished を報告した瞬間にカウントは完了として読め、それでも要約ノードはグラフ上でその隣に見えています。

:::note[クライアントが前提にしてよいこと]
`workflow.run.finished` が永続的な終端シグナルです ── 「実行は終わり、その結果はもう変わらない」という判定をスクリプトから行うなら、これを使ってください。`workflow.run.summarized` を待つのは、要約の内容そのものが必要なときだけです。イベントストリームを読む側にとっての帰結は2つあります: クライアントは `run.finished` のあとに予約ノード (`.` で始まるパス) のイベントが届くことを許容しなければならず、そして実行レベルの後続イベントは `workflow.run.summarized` だけです ── 2度目の `run.finished` も、要約のための `run.updated` もありません。

Karvex は同時に1つの実行しか進めず、エピローグもその実行の一部です。したがって `run.finished` から要約の決着までの間、次の実行の開始は `workflow_run_in_flight` で拒否されることがあります。この拒否は再試行可能です ── メッセージは保留中の要約を名指しし、要約ノードが完了するか諦めた時点で次の実行を開始できます。
:::

同じワークフローの新しい実行には、直近の要約が **コンテキスト** として渡されます。直前の実行が何を積み残したかを起点にできます:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode"                     # reads prior summaries
kvx workflow run start ship-feature --arg goal="add dark mode" --no-prior-summaries # ignores them
```

渡されるのはペイロードではなくポインターです。実行には1つのファイル ── `<run dir>/context/prior-runs.md`。過去の実行ごとに、結果・本文・ハイライト・積み残しを1セクションずつ収めたもの ── が置かれ、各ノードの `task.md` にはそのパスを示し「履歴が役立つタスクなら読むこと」と伝えるだけの2行の `## Prior runs` セクションが追加されます。履歴を必要としないノードが払う代償は数千文字ではなく2行で済み、履歴のない実行の `task.md` はこの機能が存在しなかった頃とまったく同じにレンダリングされます。どの実行が渡されたかは実行自身に記録されます (JSON API の `context_runs`)。

要約は次のコマンドで読めます:

```bash
kvx workflow summary show <run_id> [--json]
kvx workflow summary list [<name|id>] [--limit N] [--json]
```

`summary show` は、結果・要約本文・ハイライト・積み残し、そしてノードごとの1行を表示します。`summary list` は、ワークフロー単位 ── 対象を指定しなければ全ワークフロー横断 ── で新しい順に並べ、要約だけが残っている行には `(pruned)` の印を付けます (後述)。

これらを制御する `[workflow]` の設定キーは3つです: `summary_enabled` (既定 `true`) は要約ノードそのものを止めます ── オフとは、走らせて出力を捨てることではなく、要約ノードを一切作らないことです。`history_context_runs` (既定 `3`) は新しい実行に渡す過去の要約の数で、`0` にすると要約自体は残したまま注入だけを止められます。`retention_runs` (既定 `50`) はワークフローごとに保持する実行の数です。

**間引かれた実行。** ワークフローの実行数が `retention_runs` を超えると、古いものから丸ごと間引かれます: 実行・そのノード・チェックポイント・ジャーナルは消え、**要約は残ります**。そのため間引かれた実行も `kvx workflow summary list` に `run_pruned` の印付きで現れ、実行ブラウザにも並びますが、`kvx workflow run show` と復元はどちらも `workflow_run_pruned` で拒否し、そのメッセージは生き残った窓口として `kvx workflow summary show` を指し示します。間引きは実行が閉じて要約が決着したあとに走り、読み取り経路では決して走りません: 実行ブラウザを開いても何も消えません。

:::note[テストとスクリプト]
`KARVEX_WORKFLOW_SUMMARY_COMMAND` は、要約ノードを `claude` ではなく任意のコマンドに束縛します。値は argv 文字列の JSON 配列です (`["/usr/bin/env","python3","summarise.py"]`)。これはデバッグ用の隠し口ではなく、宣言された束縛の上書きです: 要約ノードは `command` ノードとまったく同じように振る舞い、`task.md` を読み、`result.json` を書き、`kvx workflow node complete` を呼びます。文字列の JSON 配列でない値が設定された場合、そのサーバーでは要約が無効化され、その旨が最初に要約されるはずだった実行で伝えられます ── 黙って `claude` を走らせることはありません。`KARVEX_WORKFLOW_DB_PATH` はワークフローデータベースの位置を既定から変更するもので、テストの実行を本物の履歴に混ぜないための仕組みです。
:::

## 過去の実行からの復元

実行は、一部のノードをすでに完了した状態で ── 再実行する代わりに過去の実行のチェックポイントから種を与えられた状態で ── 開始できます:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode" --restore-from <run_id>
kvx workflow run start ship-feature --arg goal="add dark mode" --restore-from <run_id> --restore plan
kvx workflow run start ship-feature --arg goal="add dark mode" --restore-from <run_id> --restore plan --restore-allow-changed
```

`--restore-from` だけを渡すと、その実行の *復元可能なすべてのノード* が対象になります ── 「成功した分はそのままに、これをもう一度走らせる」という最も多い使い方です。`--restore` を繰り返せば、名指ししたノードだけに絞れます。

復元されたノードは `restored` です: 元の実行の結果を持ち、成功したノードとまったく同じように出力エッジを発火させるため、下流のノードは元の実行のペイロードを受け取ります。そして **ペインは決して割り当てられません**。何も実行されないからです。タイムスタンプは元の実行のものではなく復元した瞬間なので、新しい実行のタイムラインは正直なままです。その出所 (元の実行・ノードキー・チェックポイント) は `kvx workflow node show`、JSON API、DAG ビューの詳細ストリップに表示されます。

あるノードを復元 *できる* かどうかは、元のバージョンのノードと対象バージョンのノードを2点 ── `prompt_template` と `output_schema` ── で比較して、ノードごとに決まります。両方が一致すればチェックポイントは同じ作業を指しており、違えば指していません。だからこそ編集後のワークフローへの復元が成立し、実際に変更したノードだけが再実行されます。

`--restore-from` 付きの開始は **報告を伴う成功した開始** であってエラーではありません ── すべてのノードは復元されるか、理由付きでスキップされます:

| スキップ理由 | 意味 | 回避 |
| --- | --- | --- |
| `definition_changed` | ノードの `prompt_template` か `output_schema` が元のバージョンと異なる | `--restore-allow-changed` |
| `no_checkpoint` | 元の実行に、検証済みの結果チェックポイントがない | なし |
| `payload_truncated` | チェックポイントのペイロードがストアの容量予算を超えており保持されていない | なし |

人間向け出力は両方の集合を表示します ── `restored: plan, implement · skipped: review (definition changed)` ── ので、`--restore-from` だけを渡した場合でも、何を復元しなかったかが黙殺されることはありません。

報告ではなく拒否になるものが2つあります: 対象バージョンのどのノードにも一致しない `--restore` セレクタは `workflow_restore_unknown_selector` で失敗し、実行自体が作られません。打ち間違いのせいで、復元したつもりのノードが黙って再実行されてはならないからです。そして間引かれた実行を元に指定した場合は `workflow_run_pruned` で失敗します。残っているのは要約だけであり、要約はチェックポイントではないからです。

## 過去のノードへの問いかけ

ノードが終わったとき、その成果は結果に残りますが、そこに至る思考は Claude のセッションの中にあります。問いかけ (interrogation) は、そのセッションを蘇らせて質問できるようにします:

```bash
kvx workflow node interrogate <run_id> <path> [--reconstructed] [--note <text>] [--json]
```

これはノードのセッションを fork し (`claude --resume <session> --fork-session`)、そのノードが動いていたディレクトリで新しいペインとして開きます。**元のトランスクリプトは決して変更されません** ── fork は自分の分を書きます ── ので、実行の記録はそのまま残り、同じノードにあとからもう一度問いかけられます。ペインのタイトルは `interrogate · <workflow> · <path>` で、ノードトークンは持ちません: 問いかけが元のノードになりすまして report や complete や expand を行うことはできません。

問いかけは実行ノードではありません。グラフには現れず、どの合計にも数えられず、実行を変えません ── 独自の記録であり、DAG ビューの専用レーンに、独自の開始時刻と終了時刻とともに並びます。

セッションを蘇らせられないとき ── ノードが `command` として動いていてセッションが存在しない、トランスクリプトのファイルが消えている、作業ディレクトリがもう存在しない ── は、そのどれであるかを名指しした `workflow_transcript_unavailable` が返り、**ペインは作られません**。拒否が「静かに何もしないペイン」になることはありません。そこから先の劣化した経路は明示的です: `--reconstructed` (DAG ビューでは `Shift+I`) は、ノードの保存済みチェックポイントと元のタスクから *新しい* セッションに種を与え、`reconstructed` と表示されたペインで開きます。そのペインへの最初の指示は、これが保存済みの出力からの再構成であって元のチームメイトではない、と明言します。提示はされますが、置き換えられることはありません。

返りうるその他の応答: `workflow_interrogation_active` ── 1つのノードにつき同時に1つの問いかけだけなので、開いているものを先に閉じてください (順番に問いかけ直すのは問題なく、それぞれが独自の記録になります)。`workflow_interrogation_spawn_failed` ── セッションは再開可能だったがペインを作れなかった場合で、何も記録されません。`workflow_run_pruned` ── 実行の履歴が消えており、要約に問いかけることはできません。

履歴から表示している実行のノードに問いかけると、その実行の保存済み記録には直ちに追加されます。DAG ビューの問いかけレーンに現れるのは、履歴のスナップショットが読み込み直されたあとです。

## コマンド

`kvx workflow` は `kvx --help` のコマンド一覧にも表示されます。`kvx workflow` のすべてのコマンドは、デフォルトで人間が読めるテキストを出力し、機械可読なエンベロープが必要な場合は `--json` を受け付けます ── 0.12.0 より前はこのフラグを解釈しなかった `run cancel`、`run list`、`node steer`、`node interrupt`、`node restart`、`workflow list` も含みます。`--json` を付けると、拒否は人間向けの文章ではなく生のエラーエンベロープとして出力されます。終了コードはどちらでも同じです。唯一の例外は `node complete` です。これはノード側の報告用コマンドであり、その契約は出力エンベロープではなく終了コードと環境変数です。

```bash
kvx workflow list
kvx workflow show <name|id> [--json]
kvx workflow create --file <definition.toml|json> [--name <name>] [--json]
kvx workflow update <name|id> --file <definition.toml|json> [--change-summary <text>] [--json]
```

`create` と `update` は、前述の定義ドキュメントを `--file` から読み込みます。拡張子で TOML か JSON かが決まります。`update` は現在のバージョンを編集するのではなく、新しい kvdag バージョンを作成します ── ただし、定義が現在のヘッドバージョンとバイト単位で一致する場合は何も新しく作成されず、人間向け出力にはバージョンが作成されたという表示の代わりに `(unchanged — this definition matches the current version; no new version was created)` と表示されます。`--json` なしの `show` は、ワークフローの概要、フォーマット済みタイムスタンプ付きのバージョン履歴、そしてヘッドバージョンのノード (key、label、runner、demand)、エッジ (from/to/kind/port)、宣言済み引数を表示します ── `node show`/`steer`/`restart` 用のノード `<path>` や `run start` 用の `--arg` 名を、元の定義ファイルに戻らずに見つけられます。

```bash
kvx workflow run start <name|id> [--tier auto|max|high|medium|low] [--arg KEY=VALUE]...
                                 [--restore-from <run_id>] [--restore <selector>]...
                                 [--restore-allow-changed] [--no-prior-summaries] [--json]
kvx workflow run list <name|id> [--limit N] [--json]
kvx workflow run show <run_id> [--json]
kvx workflow run cancel <run_id> [--json]
kvx workflow summary show <run_id> [--json]
kvx workflow summary list [<name|id>] [--limit N] [--json]
```

Karvex の TUI からは、代わりに `prefix+f` で **ワークフローランチャー** が開きます: 保存済みワークフローの一覧、選択中のワークフローの必須引数ごとの入力行、そしてそのワークフロー自身の `default_tier` を初期値とするティア行を持つモーダルです。`Enter` で実行を開始、`Esc` で閉じ、どの行もクリックできます。`keys.open_workflow_launcher` で割り当てを変更できます。

`run` はワークフローを選ぶ引数ではなく、名前空間です。`start`、`list`、`show`、`cancel` はそれぞれ独自の引数を取るため、ワークフローに `list` という名前を付けてもサブコマンドと衝突しません。`--tier` はワークフロー自身の `default_tier` を使います。宣言済みの実行引数ごとに `--arg` を繰り返してください ── ワークフローが宣言していない `--arg` キーは、黙って無視されるのではなく、実行開始前に、宣言済みのキー一覧とともに拒否されます。`run cancel` は実行に残っているノードをキャンセルし、そのペインを閉じます。実行が `succeeded` に達しても、ノードのペインが自動で閉じられることは **ありません** ── チームメイトの最終的な出力を読んだり、引き続き話しかけたりできるよう、開いたままになります。ペインを畳むのは `run cancel` であり、`node restart`(後述)はその1ノード分のペインだけを畳んでから再起動します。

`--json` なしの `run show` は、`tier:` の直後に、この実行が強制している上限を示す `limits:` 行 ── `limits:  max_nodes=12 · max_depth=3` ── を必ず表示します。したがって、実行が強制している内容が `--json` にしか現れないということはありません。さらに、実行が `paused` であるか、あるノードが停止しているときに責任のあるノードを名指しします: `status` 行は `paused (node "lint": needs_attention)` のように表示され、続けてそのノードの blocker の理由と再開条件、そしてすべてのノードのパス・ステータス・ラベルが表示されます ── 拡張による子ノードのラベルは受理された `--label` であり、同じ世代の子ノード同士はテンプレートのキーを共有するため、それを見分けられる唯一の手がかりです。実行がこれまでに成長のガードレールに達したことがある場合は、実行の現在の成長状態と直近にどのガードレールに達したかを報告する `growth:` 行 ── `growth:  3 of 12 nodes · limited: max_nodes reached at 14:22 UTC` ── も表示されます。その拒否の要求数と受理数はここには含まれません ── それらは後述の `kvx workflow node show` と DAG バナーにあります。

```bash
kvx workflow node show <run_id> <path> [--json]
kvx workflow node steer <run_id> <path> <text> [--json]
kvx workflow node interrupt <run_id> <path> [--json]
kvx workflow node restart <run_id> <path> [--json]
kvx workflow node complete [--result-file <path>]
kvx workflow node expand <run_id> <path> --template <key> --label <text> [--input KEY=VALUE]... [--count N] [--json]
kvx workflow node interrogate <run_id> <path> [--reconstructed] [--note <text>] [--json]
```

`<path>` は、`plan` や `fanout/worker/2` のような、ノードのインスタンスパスです ── `run show`、`workflow show`、DAG ビューに表示されます。`steer` は、後述する DAG ビューでのステアリングと同じ方法で、実行中のノードにテキストを注入します。`interrupt` はエスケープを送り、ノードを終了させずに現在のターンを止めます。`restart` はノードのペインを閉じ、試行回数を増やし、`task.md` から再起動します。`node complete` と `node expand` は、ノード自身が自分に対して実行する2つのコマンドで、どちらも環境変数にすでに入っているノードトークンで認証されます ── 前述のノードの契約とテンプレートと拡張を参照してください。`--json` なしの `node show` は、`path`/`label`/`status`/`model`/`effort`/`pane_id` に加えてノードの blocker (理由と再開条件) を表示し、このノードがガードレールに達する提案をしたことがある場合は、ガードレール・その値・要求数と受理数を示す `growth_limited:` 行も表示します。さらに、ノードのセッションのトランスクリプトがまだディスク上にあるかを示す `transcript:` 行と、そのノードが過去の実行から種を与えられている場合の `restored from:` 行も表示します。`node interrogate` は、作られた問いかけのペイン ID と、元のセッションを再開したのか再構成したのかを表示します ── 前述の過去のノードへの問いかけを参照してください。

## DAG ビュー

Karvex の TUI から実行の DAG ビューを開くと、実行の様子をライブで確認できます: グラフの層ごとに配置されたノードのボックス、その間に描かれるエッジ、そして選択中のノードのステータス、モデル、使用量、直近のチェックポイントの要約、ブロッカーを示す詳細ストリップです。

`prefix+shift+F` で開くか、グローバルメニュー — サイドバー下部のランチャー — から **workflow dag** を選びます。メニュー項目は、このサーバーが実行を進めている間だけ表示されます。描画するグラフが他に存在しないためです。キーの方はもう少し寛容です: 表示する実行がないとき、`prefix+shift+F` はそこで行き止まりにならず、代わりにワークフローランチャーへフォールスルーします ── 「まだ見るものが何もない」状態からの当然の次の一手は実行を始めることだからです。ランチャーに出すものすらない場合 ── このサーバーに保存済みワークフローが1つもない場合 ── に限り、`no workflow run on this server — start one with kvx workflow run start` と知らせます。`keys.open_workflow_dag` で割り当てを変更できます。

| 操作 | 動作 |
| --- | --- |
| `h` / `j` / `k` / `l` または矢印キー | 選択をその方向の隣接ノードへ移動する |
| ノードをクリック | ビューを離れずにそのノードを選択する |
| `Enter`、またはノードをダブルクリック | そのノードのペインにフォーカスし、DAG ビューを離れる |
| `s` | 選択中のノード用のステア入力行を開く。入力してから `Enter` を押すと `kvx workflow node steer` として送信される |
| `i` | 選択中のノードに問いかける ── その Claude セッションを fork して新しいペインで開く |
| `Shift+I` | 元のセッションが失われている場合に、保存済みチェックポイントから選択中のノードのセッションを再構成する |
| `Esc` (ステア入力行が開いている間) | 送信せずにステア入力行を閉じる |
| `Esc` (それ以外) | DAG ビューを離れる |
| マウスを動かす | 選択がポインターに追従する |

`i` と `Shift+I` が別のキーなのは、同じキーを2回押させないためです: 元のチームメイトでは *ない* セッションを開くことは常に明示的な選択であるべきなので、`i` が transcript unavailable を返したときは `Shift+I` で再構成できると通知が伝えるだけで、こちらが求めるまで何も起きません。問いかけのペインは、実行の一部ではないためノードとしてではなく、グラフの下の専用レーンに描かれます ── 問いかけ1つにつき `⌕` のボックスが1つ、動作中はティール、終了すると暗く表示されます。選択するとそのペインにフォーカスします。

履歴から開いた実行は読み取り専用です: フッターはできない操作のヒントを落とし、`s` は「過去の実行はアクティブな実行ではない」と伝え、`Enter` はまだペインが残っているノードにだけフォーカスします。復元されたノードは構造上ペインを持たず、要約ノードも閉じたあとは同じです。

受理された拡張提案で作られたノードは、作成されるそばからグラフに現れ、世代番号ではなく継承したエッジに従って配置されます。提案が拒否または切り捨てられると、ビュー上部を横切るバナーがガードレールと要求数/受理数を示し、提案したノードのボックスにも同じ注記が付きます ── 実行は、何をしたかだけでなく、何を許されなかったかも語ります。

実行終了時の要約ノードも、他のノードと同じように `summary` というラベルでグラフに現れ、実行のステータス行がその状態を伝えます: 作業中は `· summarising…`、諦めた場合は `· summary failed`。その隣にある実行自身のステータスは、どちらの場合も変わりません。

このビューは、実行の読み取り専用の投影です: ノードのステータス、位置、エッジはすべて、CLI と JSON API が報告するのと同じ実行グラフに由来します。ノードのペインへフォーカスする操作は、Karvex の他のペインにフォーカスする場合と同じ経路を通るため、DAG ビューを離れても、選択したチームメイトを見ている状態のままです。

### 実行ブラウザ

`prefix+shift+B` で **実行ブラウザ** が開きます: このサーバーが把握しているすべての実行が、いま動いているワークフローのものに限らず、全ワークフロー横断で新しい順に並びます。`keys.open_workflow_runs` で割り当てを変更できます。

各行には、実行のステータスグリフ、ワークフロー名、ティア、開始時刻、`done/total` が並び、要約がある場合はその印も付きます。履歴が間引かれた実行も、生き残った要約から組み立てられて、暗く `pruned` のタグ付きで並びます。一覧の下の詳細ストリップには、選択中の実行の引数・上限・失敗やブロッカーの行に加えて、要約の結果と最初のハイライトが表示されます。間引かれた実行では、要約本文と固定の一文 `history pruned — restore and interrogation unavailable` が表示されるので、操作できない行はその理由を自分で語ります。

| 操作 | 動作 |
| --- | --- |
| `↑` / `↓` (または `j` / `k`) | 選択を移動する |
| `Enter` | 選択中の実行を DAG ビューで開く ── まだ実行中ならライブ、そうでなければ履歴から読み取り専用で |
| `r` | その実行を新しい実行として復元する: 復元可能なすべてのノードを、確認を挟んで (`Enter` で開始、`Esc` で取り消し) |
| `Esc` | ブラウザを閉じる |

`r` は確認付きの全ノード復元です。ノード単位の復元は CLI の `--restore` です。間引かれた実行に対して、また別の実行が進行中のあいだは ── Karvex は同時に1つの実行しか進めないため ── 使えず、その理由が画面に表示されます。ノード単位の問いかけは、ここではなく、その対象であるノードのある DAG ビューに意図的に置かれています。
